complete pass on manic chapter

--- a/1_intro.tex
+++ b/1_intro.tex
@@ -194,9 +194,9 @@ On average, \manic is $2.8\times$ more energy efficient than a scalar baseline a
 \graham{add sentence saying why relates to thesis}
 
 \item[\textbf{[Silicon]}]
-\textbf{\manicsilicon proves the energy-efficiency of \manic (\autoref{manic:silicon}): }
+\textbf{\msilicon proves the energy-efficiency of \manic (\autoref{manic:silicon}): }
 
-\manicsilicon is a silicon prototype of the \manic architecture that demonstrates the energy-efficiency of the design.
+\msilicon is a silicon prototype of the \manic architecture that demonstrates the energy-efficiency of the design.
 % 
 It is a complete, standalone system possessing a RISC-V scalar core, the \manic co-processor, a data cache, an instruction cache, and main memory composed of 1KB of bootloader ROM, 64KB of SRAM, and 256KB of non-volatile embedded MRAM.
 % 
@@ -236,7 +236,7 @@ Compared to \snafu, \riptide uses 25\% less energy and is also XX\% faster witho
 
 \end{itemize}
 
-Together \sonic, \manic, \manicsilicon, \snafu, and \riptide form the new energy-efficient system stack.
+Together \sonic, \manic, \msilicon, \snafu, and \riptide form the new energy-efficient system stack.
 % 
 By maintaining programmability while achieving state-of-the-art energy-efficiency these new systems will make deployments last longer, applications easier to develop, and enable more sophisticated processing on-device.
 % 
@@ -247,7 +247,7 @@ This thesis is divided into eight chapters, including this introduction.
 %
 The second chapter provides useful background on embedded systems, intermittent computing, vector architectures, dataflow architectures, and coarse-grain reconfigurable arrays.
 % 
-The next four chapters describe \sonic, \manic \& \manicsilicon, \snafu, and \riptide in detail.
+The next four chapters describe \sonic, \manic \& \msilicon, \snafu, and \riptide in detail.
 % 
 The order of these chapters follows the timeline of development.
 % 
