--- a/headers.tex
+++ b/headers.tex
@@ -58,7 +58,7 @@
   \ifx\relax#2\relax\else\fauxschelphelp#2\relax\fi}
 
 \newcommand{\manic}{{\protect\fauxsc{Manic}}\xspace}
-\newcommand{\manicsilicon}{{\protect\fauxsc{Manic-Silicon}}\xspace}
+\newcommand{\msilicon}{{\protect\fauxsc{Manic-Silicon}}\xspace}
 \newcommand{\sonic}{{\protect\fauxsc{Sonic}}\xspace}
 \newcommand{\snafu}{{\protect\fauxsc{Snafu}}\xspace}
 \newcommand{\vdf}{{\protect\fauxsc{Vector-Dataflow}}\xspace}
