--- a/manic/manic.tex
+++ b/manic/manic.tex
@@ -7,5 +7,6 @@
 \input{manic/1_design}
 \input{manic/2_manic}
 \input{manic/3_silicon}
-\input{manic/4_eval}
-\input{manic/5_discuss}
+\input{manic/4_method}
+\input{manic/5_eval}
+\input{manic/6_discuss}
