--- a/floats.tex
+++ b/floats.tex
@@ -2,7 +2,7 @@
 \begin{figure*}[t]
 	\centering
 	\includegraphics[width=0.9\linewidth]{figures/pdf/overview-crop.pdf}	
-	\caption{This thesis contributes a new energy-efficient system stack: \sonic is a software framework that enables intermittent inference, \riptide compiles C-code to ULP CGRAs, \manic is an ULP vector-dataflow co-processor, \snafu generates ULP CGRAs, and \manicsilicon is a silicon prototype of \manic.}
+	\caption{This thesis contributes a new energy-efficient system stack: \sonic is a software framework that enables intermittent inference, \riptide compiles C-code to ULP CGRAs, \manic is an ULP vector-dataflow co-processor, \snafu generates ULP CGRAs, and \msilicon is a silicon prototype of \manic.}
 	\label{fig:overview}
 \end{figure*}
 }
