halfway through snafu

--- a/manic/0_intro.tex
+++ b/manic/0_intro.tex
@@ -4,6 +4,7 @@ medical implants, civil infrastructure monitors, and even tiny chip-scale
 satellites.
 % 
 \autoref{chapter:sonic} described how these devices can be made ``intelligent'' with on-device machine inference using \sonic.
+\graham{Say something about system stack}
 % 
 However, \sonic also demonstrated that existing systems suffer fundamental
 inefficiencies that demand new, extremely energy-efficient computer
