--- a/manic/5_eval.tex
+++ b/manic/5_eval.tex
@@ -2,7 +2,7 @@
 \label{manic:eval}
 We now evaluate \msilicon and specifically the \manic design to 1) demonstrate it's viability as an ULP MCU, 2) to show that it is more energy-efficient than prior state-of-the-art designs, and 3) to validate the vector-dataflow execution model against scalar and vector models.
 % 
-\manic draws just 19.1$\mu$W (@ 4MHz), uses $2.6\times$ less energy than the prior state-of-the-art MCU, and improves efficiency by $3.4\times$ v. scalar and as much as $24\%$ v. vector.
+\manic draws just 19.1$\mu$W (@ 4MHz), uses $2.6\times$ less energy than the prior state-of-the-art MCU, and improves efficiency by $3.4\times$ v. scalar and by $12\%$ v. vector.
 
 \tabMANICEval
 \paragraph{\manic is energy-efficient}
