--- a/sonic/8_discuss.tex
+++ b/sonic/8_discuss.tex
@@ -1,5 +1,6 @@
 \section{Discussion}
 \label{sonic:discuss}
+\graham{Say something about system stack}
 Our experience in building \sonictails demonstrates there is a large
 opportunity to accelerate inference on ULP sensor devices.
 % 
