--- a/snafu/floats.tex
+++ b/snafu/floats.tex
@@ -8,21 +8,21 @@
 }
 
 \newcommand{\figSNAFUOverviewFramework}{
-\begin{figure}[t]
+\begin{figure}[htb]
 	\centering
-	\includegraphics[width=.65\columnwidth]{snafu/figures/pdf/overview.pdf}
+	\includegraphics[width=.5\columnwidth]{snafu/figures/pdf/overview.pdf}
 	\caption{Overview of \snafu. \snafuframe is a flexible framework for generating ULP CGRAs. It takes a {\em bring-your-own functional unit} approach, allowing the designer to easily integrate custom logic tailored for specific domains.}
 	\label{fig:snafu:overview:framework}
 \end{figure}
 }
 
 \newcommand{\figSNAFUOverviewExecute}{
-\begin{figure*}[t]
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=\linewidth]{snafu/figures/pdf/execute.pdf}
 	\caption{An example execution on a \snafuframe CGRA fabric. The DFG is extracted from vectorized C-code, compiled to a bitstream, and then executed according to asynchronous dataflow firing.}
 	\label{fig:snafu:overview:execute}
-\end{figure*}
+\end{figure}
 }
 
 \newcommand{\figSNAFUCompilation}{
@@ -35,18 +35,18 @@
 }
 
 \newcommand{\figSNAFUArch}{
-\begin{figure}[t]
+\begin{figure}[htb]
 	\centering
-	\includegraphics[width=.65\columnwidth]{snafu/figures/pdf/arch.pdf}
+	\includegraphics[width=\linewidth]{snafu/figures/pdf/arch.pdf}
 	\caption{Architectural diagram of \snafuarch. \snafuarch possesses a RISC-V scalar core tightly coupled with the \snafuframe fabric. Both are attached to a unified 256\,KB banked memory.}
 	\label{fig:snafu:arch}
 \end{figure}
 }
 
 \newcommand{\figSNAFUPE}{
-\begin{figure}[t]
+\begin{figure}[htb]
 	\centering
-	\includegraphics[width=.65\columnwidth]{snafu/figures/pdf/pe.pdf}
+	\includegraphics[width=.5\columnwidth]{snafu/figures/pdf/pe.pdf}
 	\caption{\snafuframe provides a standardized interface that makes integrating new types of PEs trivial. \snafuframe handles variable-latency logic, PE-specific configuration, and the sending and receiving of values from the on-chip network.}
 	\label{fig:snafu:pe}
 \end{figure}
@@ -55,7 +55,7 @@
 \newcommand{\figSNAFUDie}{
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=.9\columnwidth]{snafu/figures/pdf/die.pdf}
+	\includegraphics[width=.8\columnwidth]{snafu/figures/pdf/die.pdf}
 	\caption{Layout of \snafuarch. Memory PEs are blue, scratchpad PEs are green, basic-ALU PEs are red, multiplier PEs are purple, the scalar core is yellow, and main-memory control logic is orange. The remaining grey regions contain routers and wires. }
 	\label{fig:snafu:die}
 \end{figure}
@@ -98,14 +98,14 @@
 		\includegraphics[width=0.5\linewidth]{snafu/figures/pdf/energy_all_norm_legend-graph-crop.pdf}\\
 		\vspace{0.4em}
 
-		\begin{subfigure}{0.49\linewidth}
+		\begin{subfigure}{0.8\linewidth}
 			\centering
 			\includegraphics[width=\linewidth]{snafu/figures/pdf/energy_all_norm-graph-crop.pdf}
 			\caption{Energy}
 			\label{fig:snafu:energy:norm}
 		\end{subfigure}
-		\hfill
-		\begin{subfigure}{0.5\linewidth}
+
+		\begin{subfigure}{0.8\linewidth}
 			\centering
 			\includegraphics[width=\linewidth]{snafu/figures/pdf/perf_all-graph-crop.pdf}
 			\caption{Execution time}
@@ -315,12 +315,8 @@
 }
 
 \newcommand{\tabSNAFUParams}{
-  \begin{table}
-    %% \renewcommand{\tabSNAFUcolsep}{12pt}
-%% \footnotesize
-\centering
-%% \resizebox{\linewidth}{!}{
-\begin{tabular}{ccp{1.5in}r}
+\resizebox{\linewidth}{!}{
+\begin{tabular}{ccp{1.7in}r}
 \toprule
  &  & \textbf{Parameter}       & \textbf{Values} \\
 \midrule
@@ -341,23 +337,17 @@
  &  & Scratchpad PE \#         & 8		 \\[.5ex]
 \bottomrule
 \end{tabular}
-%}
-\caption{Microarchitectural parameters.}
-\label{tab:snafu:params}
-\end{table}
+}
 }
 
 \newcommand{\tabSNAFUApp}{
-  \begin{table}[t]
-\footnotesize
-\centering
 \resizebox{\linewidth}{!}{
-\begin{tabular}{lp{1.25in}p{0.3in}p{0.3in}p{0.325in}}
+\begin{tabular}{lp{1.8in}p{0.3in}p{0.5in}p{0.45in}}
 \toprule
 \textbf{Name} & \textbf{Description}                                      & \textbf{Small}                    & \textbf{Medium}                   & \textbf{Large}                    \\
 \midrule
 \bf FFT       & 2D Fast-fourier transform                                 & 16$\times$16                      & 32$\times$32                      & 64$\times$64                      \\
-\bf DWT       & 2D Discrete wavelet trnsfrm                               & 16$\times$16                      & 32$\times$32                      & 64$\times$64                      \\
+\bf DWT       & 2D Discrete wavelet transform                               & 16$\times$16                      & 32$\times$32                      & 64$\times$64                      \\
 \bf Viterbi   & Viterbi decoder                                           & 256                               & 1024                              & 4096                              \\
 \bf Sort      & Radix sort                                                & 256                               & 512                               & 1024                              \\
 \bf SMM       & Sparse matrix-matrix                                      & 16$\times$16                      & 32$\times$32                      & 64$\times$64                      \\
@@ -369,14 +359,24 @@
 \bottomrule
 \end{tabular}
 }
-\caption{Benchmarks and their input sizes.}
-\label{tab:snafu:app}
-  \end{table}
 }
 
 \newcommand{\tabSNAFUTabs}{
-	\tabSNAFUParams
-	\tabSNAFUApp
+\begin{table}[htb]
+	\begin{minipage}{.38\linewidth}
+		\centering
+		\tabSNAFUParams
+		\caption{Microarchitectural \\ parameters.}
+		\label{tab:snafu:params}
+	\end{minipage}
+	\hfill
+	\begin{minipage}{.59\linewidth}
+		\centering
+		\tabSNAFUApp
+		\caption{Benchmarks and their input sizes.}
+		\label{tab:snafu:app}
+	\end{minipage}
+\end{table}
 }
 
 \newcommand{\figSNAFUIntroOverview}{
@@ -402,13 +402,13 @@
 	\centering
 	\begin{subfigure}{0.49\linewidth}
 		\centering
-		\includegraphics[width=0.9\linewidth]{snafu/figures/pdf/energy_overall-graph-crop.pdf}
+		\includegraphics[width=0.7\linewidth]{snafu/figures/pdf/energy_overall-graph-crop.pdf}
 		\caption{Energy savings.}
 		\label{fig:snafu:intro:energy}
 	\end{subfigure}
 	\begin{subfigure}{0.49\linewidth}
 		\centering
-		\includegraphics[width=0.9\linewidth]{snafu/figures/pdf/perf_overall-graph-crop.pdf}
+		\includegraphics[width=0.7\linewidth]{snafu/figures/pdf/perf_overall-graph-crop.pdf}
 		\caption{Performance.}
 		\label{fig:snafu:intro:perf}
 	\end{subfigure}
